# affine-pipeline

./: A.py  B.py  build_dpo_from_env_and_sft.py  dataset.sh  dpo.sh  train_dpo_safe_format.py
cortex/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_and_push.sh  docker-compose.local.yml  docker-compose.yml  pyproject.toml
cortex/.github/workflows/: main.yml
cortex/affine/: __init__.py
cortex/affine/api/: __init__.py  config.py  dependencies.py  middleware.py  models.py  server.py
cortex/affine/api/routers/: __init__.py  config.py  logs.py  miners.py  samples.py  scores.py  tasks.py
cortex/affine/api/services/: __init__.py  auth.py  scoring_cache.py  task_pool.py
cortex/affine/cli/: __init__.py  main.py
cortex/affine/core/: environments.py  miners.py  models.py  range_set.py  sampling_list.py  setup.py
cortex/affine/database/: __init__.py  base_dao.py  cli.py  client.py  migrate.py  schema.py  tables.py
cortex/affine/database/dao/: __init__.py  data_retention.py  execution_logs.py  miners.py  sample_results.py  score_snapshots.py  scores.py  system_config.py  task_pool.py
cortex/affine/src/: __init__.py
cortex/affine/src/executor/: __init__.py  config.py  logging_utils.py  main.py  (+3 more)
cortex/affine/utils/: __init__.py  api_client.py  errors.py  subtensor.py
cortex/compose/: docker-compose.api.local.yml  docker-compose.api.yml  docker-compose.backend.local.yml  docker-compose.backend.yml
cortex/docs/: FAQ.md  MINER.md  VALIDATOR.md
cortex/examples/: sdk.py  sdk2.py  sdk_basilica.py
cortex/tests/: test_error_handling.py
(+31 files in other folders)
