[project]
name = "affine.io"
version = "0.1.1"
description = "Anima Machina"
authors = [{ name = "affine", email = "affine@affine.io" }]
dependencies = [
    "substrate-interface>=1.7.0",
    "python-dotenv>=0.21.0",
    "bittensor",
    "bittensor-cli",
    "aiohttp>=3.10.11",
    "ipykernel>=6.30.1",
    "click>=8.0.0",
    "click-log>=0.4.0",
    "alive_progress>=3.0.0",
    "pydantic>=2.6",
    "numpy>=1.24",
    "redis==5.*",
    "boto3>=1.34",
    "orjson",
    "aiofiles",
    "huggingface_hub",
    "datasets",
    "aiobotocore>=2.23.0",
    "botocore>=1.38.27",
    "tabulate>=0.9.0",
    "prometheus-client>=0.21.0",
    "scipy>=1.11.0",
    "affinetes @ git+https://github.com/AffineFoundation/affinetes.git",
    "httpx>=0.27.0",
    "fastapi>=0.110.1,<0.111",
    "uvicorn==0.22.0",
    "gunicorn>=23.0.0",
    "basilica-sdk>=0.11.0"
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
af = "affine.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["affine"]

[tool.uv.sources]
affine = { path = ".", editable = true }
